--- a/guides/effectsize.Rmd
+++ b/guides/effectsize.Rmd
@@ -1,4 +1,7 @@
 # Effect size {#effectsize}
+
+<a href="https://github.com/transparentstats/guidelines"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
+
 <div style="text-align:center">
 ```{r echo=FALSE}
 knitr::include_graphics("figures/effectsize/teaser.png", dpi = NA)
