--- a/index.Rmd
+++ b/index.Rmd
@@ -22,6 +22,9 @@ github-repo: transparentstats/guidelines
 
 
 # Preface {-}
+
+<a href="https://github.com/transparentstats/guidelines"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
+
 [![DOI current version](https://img.shields.io/badge/DOI%20current%20version-10.5281%2Fzenodo.1228032-green.svg)](https://doi.org/10.5281/zenodo.1228032) [![DOI all versions](https://img.shields.io/badge/DOI%20all%20versions-10.5281%2Fzenodo.1186169-blue.svg)](https://doi.org/10.5281/zenodo.1186169)  
 
 This document grew out of a Special Interest Group and Workshop to develop guidelines for transparent statistical communication in Human-Computer Interaction research. 
