update imports for bayes effsize appendix

--- a/guides/appendix_effectsize.Rmd
+++ b/guides/appendix_effectsize.Rmd
@@ -11,19 +11,18 @@ The [simple effect size exemplar](#effectsize_exemplar_simple) demonstrates one 
 ### Libraries needed for this analysis
 
 ```{r appendix-es-setup, warning = FALSE, message = FALSE}
+# See here for rstan installation instructions: 
+# https://github.com/stan-dev/rstan/wiki/RStan-Getting-Started
+library(rstan)
+
 library(tidyverse)
 library(forcats)    # for fct_...()
 library(broom)      # for tidy()
 library(ggstance)   # for geom_pointrangeh(), stat_summaryh()
-
-# See here for rstan installation instructions: 
-# https://github.com/stan-dev/rstan/wiki/RStan-Getting-Started
-library(rstan)
 library(brms)       # for brm() (requires rstan)
-
 library(tidybayes)  # for mean_qi()
 
-# requires `import` package to be installed: use install.packages("import")
+# requires `import` and `MASS` packages to be installed
 import::from(MASS, mvrnorm)
 ```
 
