--- a/guides/principles.Rmd
+++ b/guides/principles.Rmd
@@ -2,7 +2,9 @@
 
 <a href="https://github.com/transparentstats/guidelines"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
 
-**Version:** 1.0 [![DOI current version](https://img.shields.io/badge/DOI%20current%20version-10.5281%2Fzenodo.1344317-green.svg)](https://doi.org/10.5281/zenodo.1344317) [![DOI all versions](https://img.shields.io/badge/DOI%20all%20versions-10.5281%2Fzenodo.1344316-blue.svg)](https://doi.org/10.5281/zenodo.1344316)  
+**Version:** 1.0 [![DOI current version](https://img.shields.io/badge/DOI%20current%20version-10.5281%2Fzenodo.1344317-green.svg)](https://doi.org/10.5281/zenodo.2226657)
+[![DOI all versions](https://img.shields.io/badge/DOI%20all%20versions-10.5281%2Fzenodo.1344316-blue.svg)](https://doi.org/10.5281/zenodo.1344316)
+[(How to cite)](#citing)
 
 
 
