--- a/guides/references.bib
+++ b/guides/references.bib
@@ -531,3 +531,16 @@ url = "http://www.sciencedirect.com/science/article/pii/S0950584907000195",
 author = "Vigdis By Kampenes and Tore Dybå and Jo E. Hannay and Dag I.K. Sjøberg",
 keywords = "Empirical software engineering, Controlled experiments, Effect size, Statistical significance, Practical importance"
 }
+
+
+@article{Wilkinson1999,
+author = {Wilkinson, Leland},
+journal = {The American Statistician},
+keywords = {Dotplot,Graphics,Histogram,Kernel density estimation},
+language = {en},
+month = {feb},
+publisher = {Taylor {\&} Francis Group},
+title = {{Dot Plots}},
+url = {http://amstat.tandfonline.com/doi/abs/10.1080/00031305.1999.10474474},
+year = {1999}
+}
