--- a/guides/multiplecomparisons.Rmd
+++ b/guides/multiplecomparisons.Rmd
@@ -1,7 +1,7 @@
-# Experiment and analysis planning {#planning}
+# Multiple comparisons {#multiplecomparisons}
 
 <mark>
-This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/1Qyp3WbFuD-99PttCo4ZPNHwlDs5cqMYL_YB8EWAful0/edit).
+This section is currently under draft on this [Google Doc](https://docs.google.com/document/d/1P-sUhiOEro1uRG6m28jU7ONeF17Gnzhiv9i1BfE-ORw/edit).
 We welcome help and feedback at all levels!
 If you would like to contribute, please see
 [Contributing to the Guidelines](https://github.com/transparentstats/guidelines/wiki/Contributing-to-the-Guidelines).
